--- a/public/index.html
+++ b/public/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="%PUBLIC_URL%/logo192.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Empowering Streamers with Next-Gen Tools and Payment Solutions"/>
+    <meta name="description" content="Next-Gen Tools and Payment Solutions for Streamers| Accept Donations in Crypto and Fiat | Alerts, Overlays, and Other Streaming Tools | Manage Donations in Digital Wallet | Monetize Brand and Community"/>
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
